parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> prog ID SEMICOLON vars eramain funcs main bloque
Rule 2     prog -> PROGRAM
Rule 3     eramain -> empty
Rule 4     main -> MAIN
Rule 5     condicion -> IF LPAREN expresion RPAREN gotoF estatutobloque masbloque
Rule 6     estatutobloque -> estatuto
Rule 7     estatutobloque -> bloque
Rule 8     gotoF -> empty
Rule 9     bloque -> LBRACKET masestatuto RBRACKET
Rule 10    masbloque -> ELSE goto estatutobloque
Rule 11    masbloque -> empty
Rule 12    goto -> empty
Rule 13    ciclo -> while LPAREN expresion RPAREN gotoF estatutobloque goto
Rule 14    while -> WHILE
Rule 15    escritura -> print LPAREN listaprint RPAREN SEMICOLON
Rule 16    print -> PRINT
Rule 17    listaprint -> expresion masprint
Rule 18    masprint -> addQPP listaprint
Rule 19    masprint -> empty
Rule 20    addQPP -> COMMA
Rule 21    asignacion -> ID EQUALS expresion SEMICOLON
Rule 22    asignacion -> idarray LSQBRACKET dimsvar RSQBRACKET EQUALS expresion SEMICOLON
Rule 23    factor -> leftparen expresion rightparen
Rule 24    factor -> varcte
Rule 25    factor -> varid
Rule 26    factor -> llamafunc
Rule 27    leftparen -> LPAREN
Rule 28    rightparen -> RPAREN
Rule 29    varid -> ID
Rule 30    varid -> idarray LSQBRACKET dimsvar RSQBRACKET
Rule 31    idarray -> ID
Rule 32    dimsvar -> expdimvar masdimsvar
Rule 33    expdimvar -> expresion
Rule 34    masdimsvar -> COMMA dimsvar
Rule 35    masdimsvar -> empty
Rule 36    exp -> termino masexp
Rule 37    masexp -> addQPPM exp
Rule 38    masexp -> empty
Rule 39    addQPPM -> PLUS
Rule 40    addQPPM -> MINUS
Rule 41    comaexpresion -> COMMA expresion comaexpresion
Rule 42    comaexpresion -> empty
Rule 43    expresion -> expcomp masexpresion
Rule 44    addQPAO -> AND
Rule 45    addQPAO -> OR
Rule 46    masexpresion -> addQPAO expresion
Rule 47    masexpresion -> empty
Rule 48    termino -> factor masterminos
Rule 49    addQTD -> TIMES
Rule 50    addQTD -> DIVIDE
Rule 51    masterminos -> addQTD termino
Rule 52    masterminos -> empty
Rule 53    expcomp -> exp expcompcontinuo
Rule 54    addQPComp -> MORETHAN
Rule 55    addQPComp -> LESSTHAN
Rule 56    addQPComp -> NOTEQUAL
Rule 57    addQPComp -> ISEQUALTO
Rule 58    addQPComp -> MORETHANEQUAL
Rule 59    addQPComp -> LESSTHANEQUAL
Rule 60    expcompcontinuo -> addQPComp expcomp
Rule 61    expcompcontinuo -> empty
Rule 62    estatuto -> asignacion
Rule 63    estatuto -> condicion
Rule 64    estatuto -> ciclo
Rule 65    estatuto -> escritura
Rule 66    estatuto -> lectura
Rule 67    estatuto -> vars
Rule 68    estatuto -> llamafunc SEMICOLON
Rule 69    estatuto -> COMMENT
Rule 70    estatuto -> CPPCOMMENT
Rule 71    lectura -> READ LPAREN ID RPAREN SEMICOLON
Rule 72    llamafunc -> idfunc LPAREN funcargs RPAREN
Rule 73    idfunc -> ID
Rule 74    funcargs -> expresion listafuncargs checarparams
Rule 75    funcargs -> empty
Rule 76    listafuncargs -> COMMA expresion listafuncargs
Rule 77    listafuncargs -> empty
Rule 78    checarparams -> empty
Rule 79    masestatuto -> estatuto masestatuto
Rule 80    masestatuto -> empty
Rule 81    vars -> VAR tipo listaid SEMICOLON vars
Rule 82    vars -> empty
Rule 83    listaid -> initvar masid
Rule 84    initvar -> ID EQUALS expresion
Rule 85    initvar -> ID LSQBRACKET dims RSQBRACKET
Rule 86    initvar -> ID
Rule 87    dims -> CTEINT masdims
Rule 88    masdims -> COMMA dims
Rule 89    masdims -> empty
Rule 90    masid -> COMMA listaid
Rule 91    masid -> empty
Rule 92    funcs -> FUNCTION funcaux LPAREN args masargs RPAREN bloquefunc funcs
Rule 93    funcs -> FUNCTION funcaux LPAREN RPAREN bloquefunc funcs
Rule 94    funcs -> empty
Rule 95    bloquefunc -> LBRACKET masestatuto retorno RBRACKET
Rule 96    retorno -> RETURN expresion SEMICOLON
Rule 97    retorno -> RETURN SEMICOLON
Rule 98    funcaux -> tipo ID
Rule 99    args -> tipo ID
Rule 100   args -> empty
Rule 101   masargs -> COMMA args masargs
Rule 102   masargs -> empty
Rule 103   tipo -> INT
Rule 104   tipo -> FLOAT
Rule 105   tipo -> CHAR
Rule 106   tipo -> BOOL
Rule 107   tipo -> STRING
Rule 108   tipo -> VOID
Rule 109   varcte -> cteint
Rule 110   varcte -> ctefloat
Rule 111   varcte -> ctechar
Rule 112   varcte -> ctestring
Rule 113   varcte -> ctebool
Rule 114   cteint -> CTEINT
Rule 115   ctefloat -> CTEFLOAT
Rule 116   ctechar -> CTECHAR
Rule 117   ctestring -> CTESTRING
Rule 118   ctebool -> TRUE
Rule 119   ctebool -> FALSE
Rule 120   empty -> <empty>

Terminals, with rules where they appear

AND                  : 44
BOOL                 : 106
CHAR                 : 105
COMMA                : 20 34 41 76 88 90 101
COMMENT              : 69
CPPCOMMENT           : 70
CTECHAR              : 116
CTEFLOAT             : 115
CTEINT               : 87 114
CTESTRING            : 117
DIVIDE               : 50
ELSE                 : 10
EQUALS               : 21 22 84
FALSE                : 119
FLOAT                : 104
FUNCTION             : 92 93
ID                   : 1 21 29 31 71 73 84 85 86 98 99
IF                   : 5
INT                  : 103
ISEQUALTO            : 57
LBRACKET             : 9 95
LESSTHAN             : 55
LESSTHANEQUAL        : 59
LPAREN               : 5 13 15 27 71 72 92 93
LSQBRACKET           : 22 30 85
MAIN                 : 4
MINUS                : 40
MORETHAN             : 54
MORETHANEQUAL        : 58
NOTEQUAL             : 56
OR                   : 45
PLUS                 : 39
PRINT                : 16
PROGRAM              : 2
RBRACKET             : 9 95
READ                 : 71
RETURN               : 96 97
RPAREN               : 5 13 15 28 71 72 92 93
RSQBRACKET           : 22 30 85
SEMICOLON            : 1 15 21 22 68 71 81 96 97
STRING               : 107
TIMES                : 49
TRUE                 : 118
VAR                  : 81
VOID                 : 108
WHILE                : 14
error                : 

Nonterminals, with rules where they appear

addQPAO              : 46
addQPComp            : 60
addQPP               : 18
addQPPM              : 37
addQTD               : 51
args                 : 92 101
asignacion           : 62
bloque               : 1 7
bloquefunc           : 92 93
checarparams         : 74
ciclo                : 64
comaexpresion        : 41
condicion            : 63
ctebool              : 113
ctechar              : 111
ctefloat             : 110
cteint               : 109
ctestring            : 112
dims                 : 85 88
dimsvar              : 22 30 34
empty                : 3 8 11 12 19 35 38 42 47 52 61 75 77 78 80 82 89 91 94 100 102
eramain              : 1
escritura            : 65
estatuto             : 6 79
estatutobloque       : 5 10 13
exp                  : 37 53
expcomp              : 43 60
expcompcontinuo      : 53
expdimvar            : 32
expresion            : 5 13 17 21 22 23 33 41 46 74 76 84 96
factor               : 48
funcargs             : 72
funcaux              : 92 93
funcs                : 1 92 93
goto                 : 10 13
gotoF                : 5 13
idarray              : 22 30
idfunc               : 72
initvar              : 83
lectura              : 66
leftparen            : 23
listafuncargs        : 74 76
listaid              : 81 90
listaprint           : 15 18
llamafunc            : 26 68
main                 : 1
masargs              : 92 101
masbloque            : 5
masdims              : 87
masdimsvar           : 32
masestatuto          : 9 79 95
masexp               : 36
masexpresion         : 43
masid                : 83
masprint             : 17
masterminos          : 48
print                : 15
prog                 : 1
programa             : 0
retorno              : 95
rightparen           : 23
termino              : 36 51
tipo                 : 81 98 99
varcte               : 24
varid                : 25
vars                 : 1 67 81
while                : 13

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . prog ID SEMICOLON vars eramain funcs main bloque
    (2) prog -> . PROGRAM

    PROGRAM         shift and go to state 1

    programa                       shift and go to state 2
    prog                           shift and go to state 3

state 1

    (2) prog -> PROGRAM .

    ID              reduce using rule 2 (prog -> PROGRAM .)


state 2

    (0) S' -> programa .



state 3

    (1) programa -> prog . ID SEMICOLON vars eramain funcs main bloque

    ID              shift and go to state 4


state 4

    (1) programa -> prog ID . SEMICOLON vars eramain funcs main bloque

    SEMICOLON       shift and go to state 5


state 5

    (1) programa -> prog ID SEMICOLON . vars eramain funcs main bloque
    (81) vars -> . VAR tipo listaid SEMICOLON vars
    (82) vars -> . empty
    (120) empty -> .

    VAR             shift and go to state 7
    FUNCTION        reduce using rule 120 (empty -> .)
    MAIN            reduce using rule 120 (empty -> .)

    empty                          shift and go to state 6
    vars                           shift and go to state 8

state 6

    (82) vars -> empty .

    COMMENT         reduce using rule 82 (vars -> empty .)
    CPPCOMMENT      reduce using rule 82 (vars -> empty .)
    ID              reduce using rule 82 (vars -> empty .)
    IF              reduce using rule 82 (vars -> empty .)
    READ            reduce using rule 82 (vars -> empty .)
    VAR             reduce using rule 82 (vars -> empty .)
    WHILE           reduce using rule 82 (vars -> empty .)
    PRINT           reduce using rule 82 (vars -> empty .)
    RBRACKET        reduce using rule 82 (vars -> empty .)
    RETURN          reduce using rule 82 (vars -> empty .)
    ELSE            reduce using rule 82 (vars -> empty .)
    FUNCTION        reduce using rule 82 (vars -> empty .)
    MAIN            reduce using rule 82 (vars -> empty .)


state 7

    (81) vars -> VAR . tipo listaid SEMICOLON vars
    (103) tipo -> . INT
    (104) tipo -> . FLOAT
    (105) tipo -> . CHAR
    (106) tipo -> . BOOL
    (107) tipo -> . STRING
    (108) tipo -> . VOID

    INT             shift and go to state 9
    FLOAT           shift and go to state 11
    CHAR            shift and go to state 14
    BOOL            shift and go to state 10
    STRING          shift and go to state 13
    VOID            shift and go to state 15

    tipo                           shift and go to state 12

state 8

    (1) programa -> prog ID SEMICOLON vars . eramain funcs main bloque
    (3) eramain -> . empty
    (120) empty -> .

    FUNCTION        reduce using rule 120 (empty -> .)
    MAIN            reduce using rule 120 (empty -> .)

    empty                          shift and go to state 16
    eramain                        shift and go to state 17

state 9

    (103) tipo -> INT .

    ID              reduce using rule 103 (tipo -> INT .)


state 10

    (106) tipo -> BOOL .

    ID              reduce using rule 106 (tipo -> BOOL .)


state 11

    (104) tipo -> FLOAT .

    ID              reduce using rule 104 (tipo -> FLOAT .)


state 12

    (81) vars -> VAR tipo . listaid SEMICOLON vars
    (83) listaid -> . initvar masid
    (84) initvar -> . ID EQUALS expresion
    (85) initvar -> . ID LSQBRACKET dims RSQBRACKET
    (86) initvar -> . ID

    ID              shift and go to state 18

    listaid                        shift and go to state 19
    initvar                        shift and go to state 20

state 13

    (107) tipo -> STRING .

    ID              reduce using rule 107 (tipo -> STRING .)


state 14

    (105) tipo -> CHAR .

    ID              reduce using rule 105 (tipo -> CHAR .)


state 15

    (108) tipo -> VOID .

    ID              reduce using rule 108 (tipo -> VOID .)


state 16

    (3) eramain -> empty .

    FUNCTION        reduce using rule 3 (eramain -> empty .)
    MAIN            reduce using rule 3 (eramain -> empty .)


state 17

    (1) programa -> prog ID SEMICOLON vars eramain . funcs main bloque
    (92) funcs -> . FUNCTION funcaux LPAREN args masargs RPAREN bloquefunc funcs
    (93) funcs -> . FUNCTION funcaux LPAREN RPAREN bloquefunc funcs
    (94) funcs -> . empty
    (120) empty -> .

    FUNCTION        shift and go to state 22
    MAIN            reduce using rule 120 (empty -> .)

    funcs                          shift and go to state 21
    empty                          shift and go to state 23

state 18

    (84) initvar -> ID . EQUALS expresion
    (85) initvar -> ID . LSQBRACKET dims RSQBRACKET
    (86) initvar -> ID .

    EQUALS          shift and go to state 24
    LSQBRACKET      shift and go to state 25
    COMMA           reduce using rule 86 (initvar -> ID .)
    SEMICOLON       reduce using rule 86 (initvar -> ID .)


state 19

    (81) vars -> VAR tipo listaid . SEMICOLON vars

    SEMICOLON       shift and go to state 26


state 20

    (83) listaid -> initvar . masid
    (90) masid -> . COMMA listaid
    (91) masid -> . empty
    (120) empty -> .

    COMMA           shift and go to state 28
    SEMICOLON       reduce using rule 120 (empty -> .)

    empty                          shift and go to state 27
    masid                          shift and go to state 29

state 21

    (1) programa -> prog ID SEMICOLON vars eramain funcs . main bloque
    (4) main -> . MAIN

    MAIN            shift and go to state 30

    main                           shift and go to state 31

state 22

    (92) funcs -> FUNCTION . funcaux LPAREN args masargs RPAREN bloquefunc funcs
    (93) funcs -> FUNCTION . funcaux LPAREN RPAREN bloquefunc funcs
    (98) funcaux -> . tipo ID
    (103) tipo -> . INT
    (104) tipo -> . FLOAT
    (105) tipo -> . CHAR
    (106) tipo -> . BOOL
    (107) tipo -> . STRING
    (108) tipo -> . VOID

    INT             shift and go to state 9
    FLOAT           shift and go to state 11
    CHAR            shift and go to state 14
    BOOL            shift and go to state 10
    STRING          shift and go to state 13
    VOID            shift and go to state 15

    tipo                           shift and go to state 33
    funcaux                        shift and go to state 32

state 23

    (94) funcs -> empty .

    MAIN            reduce using rule 94 (funcs -> empty .)


state 24

    (84) initvar -> ID EQUALS . expresion
    (43) expresion -> . expcomp masexpresion
    (53) expcomp -> . exp expcompcontinuo
    (36) exp -> . termino masexp
    (48) termino -> . factor masterminos
    (23) factor -> . leftparen expresion rightparen
    (24) factor -> . varcte
    (25) factor -> . varid
    (26) factor -> . llamafunc
    (27) leftparen -> . LPAREN
    (109) varcte -> . cteint
    (110) varcte -> . ctefloat
    (111) varcte -> . ctechar
    (112) varcte -> . ctestring
    (113) varcte -> . ctebool
    (29) varid -> . ID
    (30) varid -> . idarray LSQBRACKET dimsvar RSQBRACKET
    (72) llamafunc -> . idfunc LPAREN funcargs RPAREN
    (114) cteint -> . CTEINT
    (115) ctefloat -> . CTEFLOAT
    (116) ctechar -> . CTECHAR
    (117) ctestring -> . CTESTRING
    (118) ctebool -> . TRUE
    (119) ctebool -> . FALSE
    (31) idarray -> . ID
    (73) idfunc -> . ID

    LPAREN          shift and go to state 50
    ID              shift and go to state 41
    CTEINT          shift and go to state 46
    CTEFLOAT        shift and go to state 55
    CTECHAR         shift and go to state 47
    CTESTRING       shift and go to state 38
    TRUE            shift and go to state 56
    FALSE           shift and go to state 35

    ctechar                        shift and go to state 34
    varid                          shift and go to state 36
    leftparen                      shift and go to state 37
    termino                        shift and go to state 39
    idarray                        shift and go to state 40
    cteint                         shift and go to state 43
    ctebool                        shift and go to state 44
    ctestring                      shift and go to state 45
    varcte                         shift and go to state 51
    ctefloat                       shift and go to state 48
    expcomp                        shift and go to state 49
    expresion                      shift and go to state 53
    factor                         shift and go to state 54
    exp                            shift and go to state 52
    llamafunc                      shift and go to state 42
    idfunc                         shift and go to state 57

state 25

    (85) initvar -> ID LSQBRACKET . dims RSQBRACKET
    (87) dims -> . CTEINT masdims

    CTEINT          shift and go to state 59

    dims                           shift and go to state 58

state 26

    (81) vars -> VAR tipo listaid SEMICOLON . vars
    (81) vars -> . VAR tipo listaid SEMICOLON vars
    (82) vars -> . empty
    (120) empty -> .

  ! shift/reduce conflict for VAR resolved as shift
    VAR             shift and go to state 7
    FUNCTION        reduce using rule 120 (empty -> .)
    MAIN            reduce using rule 120 (empty -> .)
    COMMENT         reduce using rule 120 (empty -> .)
    CPPCOMMENT      reduce using rule 120 (empty -> .)
    ID              reduce using rule 120 (empty -> .)
    IF              reduce using rule 120 (empty -> .)
    READ            reduce using rule 120 (empty -> .)
    WHILE           reduce using rule 120 (empty -> .)
    PRINT           reduce using rule 120 (empty -> .)
    RBRACKET        reduce using rule 120 (empty -> .)
    RETURN          reduce using rule 120 (empty -> .)
    ELSE            reduce using rule 120 (empty -> .)

  ! VAR             [ reduce using rule 120 (empty -> .) ]

    vars                           shift and go to state 60
    empty                          shift and go to state 6

state 27

    (91) masid -> empty .

    SEMICOLON       reduce using rule 91 (masid -> empty .)


state 28

    (90) masid -> COMMA . listaid
    (83) listaid -> . initvar masid
    (84) initvar -> . ID EQUALS expresion
    (85) initvar -> . ID LSQBRACKET dims RSQBRACKET
    (86) initvar -> . ID

    ID              shift and go to state 18

    listaid                        shift and go to state 61
    initvar                        shift and go to state 20

state 29

    (83) listaid -> initvar masid .

    SEMICOLON       reduce using rule 83 (listaid -> initvar masid .)


state 30

    (4) main -> MAIN .

    LBRACKET        reduce using rule 4 (main -> MAIN .)


state 31

    (1) programa -> prog ID SEMICOLON vars eramain funcs main . bloque
    (9) bloque -> . LBRACKET masestatuto RBRACKET

    LBRACKET        shift and go to state 62

    bloque                         shift and go to state 63

state 32

    (92) funcs -> FUNCTION funcaux . LPAREN args masargs RPAREN bloquefunc funcs
    (93) funcs -> FUNCTION funcaux . LPAREN RPAREN bloquefunc funcs

    LPAREN          shift and go to state 64


state 33

    (98) funcaux -> tipo . ID

    ID              shift and go to state 65


state 34

    (111) varcte -> ctechar .

    TIMES           reduce using rule 111 (varcte -> ctechar .)
    DIVIDE          reduce using rule 111 (varcte -> ctechar .)
    PLUS            reduce using rule 111 (varcte -> ctechar .)
    MINUS           reduce using rule 111 (varcte -> ctechar .)
    MORETHAN        reduce using rule 111 (varcte -> ctechar .)
    LESSTHAN        reduce using rule 111 (varcte -> ctechar .)
    NOTEQUAL        reduce using rule 111 (varcte -> ctechar .)
    ISEQUALTO       reduce using rule 111 (varcte -> ctechar .)
    MORETHANEQUAL   reduce using rule 111 (varcte -> ctechar .)
    LESSTHANEQUAL   reduce using rule 111 (varcte -> ctechar .)
    AND             reduce using rule 111 (varcte -> ctechar .)
    OR              reduce using rule 111 (varcte -> ctechar .)
    SEMICOLON       reduce using rule 111 (varcte -> ctechar .)
    COMMA           reduce using rule 111 (varcte -> ctechar .)
    RSQBRACKET      reduce using rule 111 (varcte -> ctechar .)
    RPAREN          reduce using rule 111 (varcte -> ctechar .)


state 35

    (119) ctebool -> FALSE .

    TIMES           reduce using rule 119 (ctebool -> FALSE .)
    DIVIDE          reduce using rule 119 (ctebool -> FALSE .)
    PLUS            reduce using rule 119 (ctebool -> FALSE .)
    MINUS           reduce using rule 119 (ctebool -> FALSE .)
    MORETHAN        reduce using rule 119 (ctebool -> FALSE .)
    LESSTHAN        reduce using rule 119 (ctebool -> FALSE .)
    NOTEQUAL        reduce using rule 119 (ctebool -> FALSE .)
    ISEQUALTO       reduce using rule 119 (ctebool -> FALSE .)
    MORETHANEQUAL   reduce using rule 119 (ctebool -> FALSE .)
    LESSTHANEQUAL   reduce using rule 119 (ctebool -> FALSE .)
    AND             reduce using rule 119 (ctebool -> FALSE .)
    OR              reduce using rule 119 (ctebool -> FALSE .)
    RPAREN          reduce using rule 119 (ctebool -> FALSE .)
    COMMA           reduce using rule 119 (ctebool -> FALSE .)
    SEMICOLON       reduce using rule 119 (ctebool -> FALSE .)
    RSQBRACKET      reduce using rule 119 (ctebool -> FALSE .)


state 36

    (25) factor -> varid .

    TIMES           reduce using rule 25 (factor -> varid .)
    DIVIDE          reduce using rule 25 (factor -> varid .)
    PLUS            reduce using rule 25 (factor -> varid .)
    MINUS           reduce using rule 25 (factor -> varid .)
    MORETHAN        reduce using rule 25 (factor -> varid .)
    LESSTHAN        reduce using rule 25 (factor -> varid .)
    NOTEQUAL        reduce using rule 25 (factor -> varid .)
    ISEQUALTO       reduce using rule 25 (factor -> varid .)
    MORETHANEQUAL   reduce using rule 25 (factor -> varid .)
    LESSTHANEQUAL   reduce using rule 25 (factor -> varid .)
    AND             reduce using rule 25 (factor -> varid .)
    OR              reduce using rule 25 (factor -> varid .)
    SEMICOLON       reduce using rule 25 (factor -> varid .)
    RPAREN          reduce using rule 25 (factor -> varid .)
    COMMA           reduce using rule 25 (factor -> varid .)
    RSQBRACKET      reduce using rule 25 (factor -> varid .)


state 37

    (23) factor -> leftparen . expresion rightparen
    (43) expresion -> . expcomp masexpresion
    (53) expcomp -> . exp expcompcontinuo
    (36) exp -> . termino masexp
    (48) termino -> . factor masterminos
    (23) factor -> . leftparen expresion rightparen
    (24) factor -> . varcte
    (25) factor -> . varid
    (26) factor -> . llamafunc
    (27) leftparen -> . LPAREN
    (109) varcte -> . cteint
    (110) varcte -> . ctefloat
    (111) varcte -> . ctechar
    (112) varcte -> . ctestring
    (113) varcte -> . ctebool
    (29) varid -> . ID
    (30) varid -> . idarray LSQBRACKET dimsvar RSQBRACKET
    (72) llamafunc -> . idfunc LPAREN funcargs RPAREN
    (114) cteint -> . CTEINT
    (115) ctefloat -> . CTEFLOAT
    (116) ctechar -> . CTECHAR
    (117) ctestring -> . CTESTRING
    (118) ctebool -> . TRUE
    (119) ctebool -> . FALSE
    (31) idarray -> . ID
    (73) idfunc -> . ID

    LPAREN          shift and go to state 50
    ID              shift and go to state 41
    CTEINT          shift and go to state 46
    CTEFLOAT        shift and go to state 55
    CTECHAR         shift and go to state 47
    CTESTRING       shift and go to state 38
    TRUE            shift and go to state 56
    FALSE           shift and go to state 35

    ctechar                        shift and go to state 34
    varid                          shift and go to state 36
    leftparen                      shift and go to state 37
    termino                        shift and go to state 39
    idarray                        shift and go to state 40
    cteint                         shift and go to state 43
    ctebool                        shift and go to state 44
    ctestring                      shift and go to state 45
    varcte                         shift and go to state 51
    ctefloat                       shift and go to state 48
    expcomp                        shift and go to state 49
    expresion                      shift and go to state 66
    factor                         shift and go to state 54
    exp                            shift and go to state 52
    llamafunc                      shift and go to state 42
    idfunc                         shift and go to state 57

state 38

    (117) ctestring -> CTESTRING .

    TIMES           reduce using rule 117 (ctestring -> CTESTRING .)
    DIVIDE          reduce using rule 117 (ctestring -> CTESTRING .)
    PLUS            reduce using rule 117 (ctestring -> CTESTRING .)
    MINUS           reduce using rule 117 (ctestring -> CTESTRING .)
    MORETHAN        reduce using rule 117 (ctestring -> CTESTRING .)
    LESSTHAN        reduce using rule 117 (ctestring -> CTESTRING .)
    NOTEQUAL        reduce using rule 117 (ctestring -> CTESTRING .)
    ISEQUALTO       reduce using rule 117 (ctestring -> CTESTRING .)
    MORETHANEQUAL   reduce using rule 117 (ctestring -> CTESTRING .)
    LESSTHANEQUAL   reduce using rule 117 (ctestring -> CTESTRING .)
    AND             reduce using rule 117 (ctestring -> CTESTRING .)
    OR              reduce using rule 117 (ctestring -> CTESTRING .)
    COMMA           reduce using rule 117 (ctestring -> CTESTRING .)
    RPAREN          reduce using rule 117 (ctestring -> CTESTRING .)
    SEMICOLON       reduce using rule 117 (ctestring -> CTESTRING .)
    RSQBRACKET      reduce using rule 117 (ctestring -> CTESTRING .)


state 39

    (36) exp -> termino . masexp
    (37) masexp -> . addQPPM exp
    (38) masexp -> . empty
    (39) addQPPM -> . PLUS
    (40) addQPPM -> . MINUS
    (120) empty -> .

    PLUS            shift and go to state 67
    MINUS           shift and go to state 69
    MORETHAN        reduce using rule 120 (empty -> .)
    LESSTHAN        reduce using rule 120 (empty -> .)
    NOTEQUAL        reduce using rule 120 (empty -> .)
    ISEQUALTO       reduce using rule 120 (empty -> .)
    MORETHANEQUAL   reduce using rule 120 (empty -> .)
    LESSTHANEQUAL   reduce using rule 120 (empty -> .)
    AND             reduce using rule 120 (empty -> .)
    OR              reduce using rule 120 (empty -> .)
    COMMA           reduce using rule 120 (empty -> .)
    SEMICOLON       reduce using rule 120 (empty -> .)
    RPAREN          reduce using rule 120 (empty -> .)
    RSQBRACKET      reduce using rule 120 (empty -> .)

    masexp                         shift and go to state 68
    empty                          shift and go to state 71
    addQPPM                        shift and go to state 70

state 40

    (30) varid -> idarray . LSQBRACKET dimsvar RSQBRACKET

    LSQBRACKET      shift and go to state 72


state 41

    (29) varid -> ID .
    (31) idarray -> ID .
    (73) idfunc -> ID .

    TIMES           reduce using rule 29 (varid -> ID .)
    DIVIDE          reduce using rule 29 (varid -> ID .)
    PLUS            reduce using rule 29 (varid -> ID .)
    MINUS           reduce using rule 29 (varid -> ID .)
    MORETHAN        reduce using rule 29 (varid -> ID .)
    LESSTHAN        reduce using rule 29 (varid -> ID .)
    NOTEQUAL        reduce using rule 29 (varid -> ID .)
    ISEQUALTO       reduce using rule 29 (varid -> ID .)
    MORETHANEQUAL   reduce using rule 29 (varid -> ID .)
    LESSTHANEQUAL   reduce using rule 29 (varid -> ID .)
    AND             reduce using rule 29 (varid -> ID .)
    OR              reduce using rule 29 (varid -> ID .)
    COMMA           reduce using rule 29 (varid -> ID .)
    SEMICOLON       reduce using rule 29 (varid -> ID .)
    RPAREN          reduce using rule 29 (varid -> ID .)
    RSQBRACKET      reduce using rule 29 (varid -> ID .)
    LSQBRACKET      reduce using rule 31 (idarray -> ID .)
    LPAREN          reduce using rule 73 (idfunc -> ID .)


state 42

    (26) factor -> llamafunc .

    TIMES           reduce using rule 26 (factor -> llamafunc .)
    DIVIDE          reduce using rule 26 (factor -> llamafunc .)
    PLUS            reduce using rule 26 (factor -> llamafunc .)
    MINUS           reduce using rule 26 (factor -> llamafunc .)
    MORETHAN        reduce using rule 26 (factor -> llamafunc .)
    LESSTHAN        reduce using rule 26 (factor -> llamafunc .)
    NOTEQUAL        reduce using rule 26 (factor -> llamafunc .)
    ISEQUALTO       reduce using rule 26 (factor -> llamafunc .)
    MORETHANEQUAL   reduce using rule 26 (factor -> llamafunc .)
    LESSTHANEQUAL   reduce using rule 26 (factor -> llamafunc .)
    AND             reduce using rule 26 (factor -> llamafunc .)
    OR              reduce using rule 26 (factor -> llamafunc .)
    SEMICOLON       reduce using rule 26 (factor -> llamafunc .)
    RPAREN          reduce using rule 26 (factor -> llamafunc .)
    COMMA           reduce using rule 26 (factor -> llamafunc .)
    RSQBRACKET      reduce using rule 26 (factor -> llamafunc .)


state 43

    (109) varcte -> cteint .

    TIMES           reduce using rule 109 (varcte -> cteint .)
    DIVIDE          reduce using rule 109 (varcte -> cteint .)
    PLUS            reduce using rule 109 (varcte -> cteint .)
    MINUS           reduce using rule 109 (varcte -> cteint .)
    MORETHAN        reduce using rule 109 (varcte -> cteint .)
    LESSTHAN        reduce using rule 109 (varcte -> cteint .)
    NOTEQUAL        reduce using rule 109 (varcte -> cteint .)
    ISEQUALTO       reduce using rule 109 (varcte -> cteint .)
    MORETHANEQUAL   reduce using rule 109 (varcte -> cteint .)
    LESSTHANEQUAL   reduce using rule 109 (varcte -> cteint .)
    AND             reduce using rule 109 (varcte -> cteint .)
    OR              reduce using rule 109 (varcte -> cteint .)
    SEMICOLON       reduce using rule 109 (varcte -> cteint .)
    COMMA           reduce using rule 109 (varcte -> cteint .)
    RSQBRACKET      reduce using rule 109 (varcte -> cteint .)
    RPAREN          reduce using rule 109 (varcte -> cteint .)


state 44

    (113) varcte -> ctebool .

    TIMES           reduce using rule 113 (varcte -> ctebool .)
    DIVIDE          reduce using rule 113 (varcte -> ctebool .)
    PLUS            reduce using rule 113 (varcte -> ctebool .)
    MINUS           reduce using rule 113 (varcte -> ctebool .)
    MORETHAN        reduce using rule 113 (varcte -> ctebool .)
    LESSTHAN        reduce using rule 113 (varcte -> ctebool .)
    NOTEQUAL        reduce using rule 113 (varcte -> ctebool .)
    ISEQUALTO       reduce using rule 113 (varcte -> ctebool .)
    MORETHANEQUAL   reduce using rule 113 (varcte -> ctebool .)
    LESSTHANEQUAL   reduce using rule 113 (varcte -> ctebool .)
    AND             reduce using rule 113 (varcte -> ctebool .)
    OR              reduce using rule 113 (varcte -> ctebool .)
    SEMICOLON       reduce using rule 113 (varcte -> ctebool .)
    COMMA           reduce using rule 113 (varcte -> ctebool .)
    RSQBRACKET      reduce using rule 113 (varcte -> ctebool .)
    RPAREN          reduce using rule 113 (varcte -> ctebool .)


state 45

    (112) varcte -> ctestring .

    TIMES           reduce using rule 112 (varcte -> ctestring .)
    DIVIDE          reduce using rule 112 (varcte -> ctestring .)
    PLUS            reduce using rule 112 (varcte -> ctestring .)
    MINUS           reduce using rule 112 (varcte -> ctestring .)
    MORETHAN        reduce using rule 112 (varcte -> ctestring .)
    LESSTHAN        reduce using rule 112 (varcte -> ctestring .)
    NOTEQUAL        reduce using rule 112 (varcte -> ctestring .)
    ISEQUALTO       reduce using rule 112 (varcte -> ctestring .)
    MORETHANEQUAL   reduce using rule 112 (varcte -> ctestring .)
    LESSTHANEQUAL   reduce using rule 112 (varcte -> ctestring .)
    AND             reduce using rule 112 (varcte -> ctestring .)
    OR              reduce using rule 112 (varcte -> ctestring .)
    SEMICOLON       reduce using rule 112 (varcte -> ctestring .)
    COMMA           reduce using rule 112 (varcte -> ctestring .)
    RSQBRACKET      reduce using rule 112 (varcte -> ctestring .)
    RPAREN          reduce using rule 112 (varcte -> ctestring .)


state 46

    (114) cteint -> CTEINT .
